[gd_scene load_steps=12 format=2]

[ext_resource path="res://bfr.gd" type="Script" id=1]
[ext_resource path="res://booster.tscn" type="PackedScene" id=2]
[ext_resource path="res://raptor2.tscn" type="PackedScene" id=3]
[ext_resource path="res://grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/booster2.tscn" type="PackedScene" id=5]
[ext_resource path="res://bfs.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ship2.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/engine_start.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/engine_cutoff1.wav" type="AudioStream" id=9]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 4.5, 29, 4.5 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 4.5, 4.5, 24 )

[node name="BFR" type="Node" index="0"]
script = ExtResource( 1 )

[node name="booster" type="RigidBody" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 29, 0 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.5
gravity_scale = 1.0
custom_integrator = false
continuous_cd = false
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
linear_velocity = Vector3( 0, 0, 0 )
linear_damp = -1.0
angular_velocity = Vector3( 0, 0, 0 )
angular_damp = -1.0
_sections_unfolded = [ "Transform" ]

[node name="booster" parent="booster" index="0" instance=ExtResource( 2 )]
transform = Transform( -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0 )
visible = false

[node name="booster raptor0" parent="booster" index="1" instance=ExtResource( 3 )]
state = null

[node name="booster raptor1" parent="booster" index="2" instance=ExtResource( 3 )]
state = null

[node name="booster raptor2" parent="booster" index="3" instance=ExtResource( 3 )]
state = null

[node name="booster raptor3" parent="booster" index="4" instance=ExtResource( 3 )]
state = null

[node name="booster raptor4" parent="booster" index="5" instance=ExtResource( 3 )]
state = null

[node name="booster raptor5" parent="booster" index="6" instance=ExtResource( 3 )]
state = null

[node name="booster raptor6" parent="booster" index="7" instance=ExtResource( 3 )]
state = null

[node name="booster raptor7" parent="booster" index="8" instance=ExtResource( 3 )]
state = null

[node name="booster raptor8" parent="booster" index="9" instance=ExtResource( 3 )]
state = null

[node name="booster raptor9" parent="booster" index="10" instance=ExtResource( 3 )]
state = null

[node name="booster raptor10" parent="booster" index="11" instance=ExtResource( 3 )]
state = null

[node name="booster raptor11" parent="booster" index="12" instance=ExtResource( 3 )]
state = null

[node name="booster raptor12" parent="booster" index="13" instance=ExtResource( 3 )]
state = null

[node name="booster raptor13" parent="booster" index="14" instance=ExtResource( 3 )]
state = null

[node name="booster raptor14" parent="booster" index="15" instance=ExtResource( 3 )]
state = null

[node name="booster raptor15" parent="booster" index="16" instance=ExtResource( 3 )]
state = null

[node name="booster raptor16" parent="booster" index="17" instance=ExtResource( 3 )]
state = null

[node name="booster raptor17" parent="booster" index="18" instance=ExtResource( 3 )]
state = null

[node name="booster raptor18" parent="booster" index="19" instance=ExtResource( 3 )]
state = null

[node name="booster raptor19" parent="booster" index="20" instance=ExtResource( 3 )]
state = null

[node name="booster raptor20" parent="booster" index="21" instance=ExtResource( 3 )]
state = null

[node name="booster raptor21" parent="booster" index="22" instance=ExtResource( 3 )]
state = null

[node name="booster raptor22" parent="booster" index="23" instance=ExtResource( 3 )]
state = null

[node name="booster raptor23" parent="booster" index="24" instance=ExtResource( 3 )]
state = null

[node name="booster raptor24" parent="booster" index="25" instance=ExtResource( 3 )]
state = null

[node name="booster raptor25" parent="booster" index="26" instance=ExtResource( 3 )]
state = null

[node name="booster raptor26" parent="booster" index="27" instance=ExtResource( 3 )]
state = null

[node name="booster raptor27" parent="booster" index="28" instance=ExtResource( 3 )]
state = null

[node name="booster raptor28" parent="booster" index="29" instance=ExtResource( 3 )]
state = null

[node name="booster raptor29" parent="booster" index="30" instance=ExtResource( 3 )]
state = null

[node name="booster raptor30" parent="booster" index="31" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, -0.758062, -0.280414, -0.230034 )
state = null

[node name="grid0" parent="booster" index="32" instance=ExtResource( 4 )]
transform = Transform( 0.707107, -0.707107, -3.09086e-08, 0, -4.37114e-08, 1, -0.707107, -0.707107, -3.09086e-08, 0, 37, 0 )

[node name="grid1" parent="booster" index="33" instance=ExtResource( 4 )]
transform = Transform( -0.707107, 0.707107, 3.09086e-08, 0, -4.37114e-08, 1, 0.707107, 0.707107, 3.09086e-08, 0, 37, 0 )

[node name="grid2" parent="booster" index="34" instance=ExtResource( 4 )]
transform = Transform( 0.707107, 0.707107, 3.09086e-08, 0, -4.37114e-08, 1, 0.707107, -0.707107, -3.09086e-08, 0, 37, 0 )

[node name="grid3" parent="booster" index="35" instance=ExtResource( 4 )]
transform = Transform( -0.766044, -0.642788, -2.80971e-08, 0, -4.37114e-08, 1, -0.642788, 0.766044, 3.34849e-08, 0, 37, 0 )

[node name="CollisionShape" type="CollisionShape" parent="booster" index="36"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3e-06, 0, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="booster2" parent="booster" index="37" instance=ExtResource( 5 )]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -29, 0 )

[node name="ship" type="RigidBody" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 82, 0 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.5
gravity_scale = 1.0
custom_integrator = false
continuous_cd = false
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
linear_velocity = Vector3( 0, 0, 0 )
linear_damp = -1.0
angular_velocity = Vector3( 0, 0, 0 )
angular_damp = -1.0
_sections_unfolded = [ "Transform" ]

[node name="ship" parent="ship" index="0" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -24, 0 )
visible = false

[node name="ship raptor0" parent="ship" index="1" instance=ExtResource( 3 )]
transform = Transform( 0.707107, 1.0677e-07, 0.707107, 0, -1, 1.50996e-07, 0.707107, -1.0677e-07, -0.707107, 0, 1.81551, 0.83739 )
visible = false
state = null

[node name="ship raptor1" parent="ship" index="2" instance=ExtResource( 3 )]
transform = Transform( -0.707107, 1.10532e-10, -0.707107, -8.74228e-08, -1, 8.72665e-08, -0.707107, 1.23524e-07, 0.707107, 0, 1.80262, -0.822893 )
visible = false
state = null

[node name="ship raptor2" parent="ship" index="3" instance=ExtResource( 3 )]
transform = Transform( -0.707107, -4.92548e-08, -0.707107, -8.74228e-08, -1, 1.5708e-07, -0.707107, 1.72889e-07, 0.707107, 1.91545, 3.74852, 1.94233 )
visible = false
state = null

[node name="ship raptor3" parent="ship" index="4" instance=ExtResource( 3 )]
transform = Transform( 0.707107, -1.23524e-07, -0.707107, -8.74228e-08, -1, 8.72665e-08, -0.707107, 1.10532e-10, -0.707107, -2, 3.75, 2 )
visible = false
state = null

[node name="ship raptor4" parent="ship" index="5" instance=ExtResource( 3 )]
transform = Transform( 0.707107, -1.10532e-10, 0.707107, -8.74228e-08, -1, 8.72665e-08, 0.707107, -1.23524e-07, -0.707107, -2, 3.75, -2 )
visible = false
state = null

[node name="ship raptor5" parent="ship" index="6" instance=ExtResource( 3 )]
transform = Transform( -0.707107, 1.23524e-07, 0.707107, -8.74228e-08, -1, 8.72665e-08, 0.707107, -1.10532e-10, 0.707107, 2, 3.75, -2 )
visible = false
state = null

[node name="CollisionShape2" type="CollisionShape" parent="ship" index="7"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="ship2" parent="ship" index="8" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -14, 0 )
_sections_unfolded = [ "Transform" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 0.999651, -0.0264267, 0, 0.0264267, 0.999651, 0, -1.51442, 8.75369 )
visible = false
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0

[node name="audio1" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="engineCutoff" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

